# VoiceActivityDetection

./: CMakeLists.txt  README.md  gnuscript.pg~  razdwa.pg~
EnergyBased/inc/: EnergyDetector.h
EnergyBased/src/: EnergyDetector.cpp
SingleFrequencyFiltering/inc/: Envelope.h  SFFDetector.h  Signal.h
SingleFrequencyFiltering/src/: Envelope.cpp  SFFDetector.cpp  Signal.cpp
SingleFrequencyFilteringAneeja/: Detector.cpp  Detector.h
SingleFrequencyFilteringAneeja/inc/: Detector.h  SFFThresholdFinder.h
SingleFrequencyFilteringAneeja/src/: Detector.cpp  SFFThresholdFinder.cpp
SingleFrequencyFilteringAneejaChanged/inc/: NewDetector.h
SingleFrequencyFilteringAneejaChanged/src/: NewDetector.cpp
SingleFrequencyFilteringMc/inc/: Envelope.h  SFFDetector.h  Signal.h
SingleFrequencyFilteringMc/src/: Envelope.cpp  SFFDetector.cpp
inc/: EnergyBasedDetector.h  ResultPlotter.h  SFFDetector.h  SingleFrameEnergyFinder.h  SohnsDetector.h  ThresholdFinder.h  VAD.h  VADImp.h  WAVFileSetter.h  WAVFileSetterImp.h  WAVReader.h  WAVReaderImp.h
latex/: bachelor_thesis.aux  bachelor_thesis.blg  bachelor_thesis.lof  bachelor_thesis.tex  bachelor_thesis.toc  dyplom-inz-utf8-unix.aux  dyplom-inz-utf8-unix.toc
latex/WavSource: People: Comedians _ Free Wav Files and Sound Clips_files/: 300lo.js  adstring14.js  bottom_line.html  ga.js  geninfo.js  google_search.html  horiz468.js  plusone.js  sh.html  tttl-1st.js  whos_online.html  widget2.aspx  widget2_002.aspx
src/: EnergyBasedDetector.cpp  ResultPlotter.cpp  SFFDetector.cpp  SingleFrameEnergyFinder.cpp  SohnsDetector.cpp  ThresholdFinder.cpp  VAD.cpp  VADImp.cpp  WAVFileSetter.cpp  WAVFileSetterImp.cpp  WAVReader.cpp  WAVReaderImp.cpp  main.cpp
zsiciarz-aquila-d5e3bde/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  install_manifest.txt  uninstall.cmake
zsiciarz-aquila-d5e3bde/examples/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/am_modulation/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/dtw_path_recovery/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/fft_comparison/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/fft_filter/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/fft_simple_spectrum/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/frame_iteration/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/generators/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/mfcc_calculation/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/sine_generator/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/spectrogram/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/square_generator/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/text_plot/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/examples/triangle_generator/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/lib/: Makefile  cmake_install.cmake
zsiciarz-aquila-d5e3bde/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  constants.h
(+13 files in other folders)
